<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_coffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angelo.caffelatrino.ActivityCoffee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <CheckBox
            android:text="@string/glass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxGlass"
            android:gravity="center_vertical|center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"/>

        <CheckBox
            android:text="@string/decaffeinated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxDecaf"
            android:gravity="center_vertical|center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="@string/strong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxShort"
                android:layout_weight="1"
                android:onClick="exclusiveButtonDimensions"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxLarge"
                android:layout_weight="1"
                android:onClick="exclusiveButtonDimensions"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:textOn="@string/gradation"
                android:textOff="@string/gradation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButtonGradation"
                android:onClick="gradation"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ToggleButton
                android:textOn="@string/milk"
                android:textOff="@string/milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButtonMilk"
                android:layout_weight="1"
                android:onClick="milk"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>


        <TextView
            android:text="@string/textSugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSugar"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLess"
                android:layout_weight="1"
                android:onClick="sugarLess"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar1"
                android:gravity="center"
                android:max="1" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2"
                android:max="1"
                android:layout_weight="1" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar3"
                android:max="1"
                android:layout_weight="1" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar4"
                android:max="1"
                android:layout_weight="1" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar5"
                android:max="1"
                android:layout_weight="1" />

            <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPlus"
                android:layout_weight="1"
                android:onClick="sugarPlus"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:text="@string/sugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxSugar"
                    android:layout_weight="1"
                    android:onClick="exclusiveButtonSugar"
                    android:gravity="center" />

                <CheckBox
                    android:text="@string/brownSugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxBrownSugar"
                    android:layout_weight="1"
                    android:onClick="exclusiveButtonSugar"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:text="@string/honey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxHoney"
                    android:layout_weight="1"
                    android:onClick="exclusiveButtonSugar"
                    android:gravity="center" />

                <CheckBox
                    android:text="@string/sweetener"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxSweetener"
                    android:layout_weight="1"
                    android:onClick="exclusiveButtonSugar"
                    android:gravity="center" />


            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:text="@string/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBuy"
                android:layout_weight="1"
                android:onClick="buy"
                tools:ignore="ButtonStyle" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonBack"
                android:layout_weight="1"
                android:onClick="back"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
