<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angelo.caffelatrino.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"/>

        <Button
            android:text="@string/espresso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEspresso"
            android:onClick="selectCoffee"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"/>

        <Button
            android:text="@string/ginseng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGinseng"
            android:onClick="selectCoffee"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"/>

        <Button
            android:text="@string/barley"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBarley"
            android:onClick="selectCoffee"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"/>

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/buttonExit"
            android:onClick="exit"/>

    </LinearLayout>
</RelativeLayout>
